# empty_api

./: .gitignore  LICENSE  README.md  api.Dockerfile  docker-compose.yml  pyproject.toml
app/: application.py
app/api/: healthcheck.py  routes.py  test_request.py
app/core/: settings.py  utils.py
app/models/: healthcheck.py  model_test_request.py
app/services/: example_service.py
