[tool.poetry]
name = "empty"
version = "0.1.0"
description = "Example text"
authors = ["dayvagrant"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
tqdm = "^4.62.3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
